--- a/myProject/myApp/templates/myApp/create_recipe.html
+++ b/myProject/myApp/templates/myApp/create_recipe.html
@@ -133,7 +133,7 @@
         button {
             margin-top: 20px;
             padding: 10px;
-            background-color: #d6efed;
+            background-color: #ffffff;
             color: rgb(0, 0, 0);
             border: none;
             border-radius: 5px;
@@ -143,7 +143,7 @@
         }
 
         button:hover {
-            background-color: #ffffff; /* Darker background on hover */
+            background-color: #87CEEB; /* Darker background on hover */
         }
 
         /* Responsive styling */
